//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  last_name String [not null]
  email String [unique, not null]
  password String [not null]
  role String [default: 'user']
  confirmed_email Boolean [default: false]
  created_at DateTime [default: `now()`, not null]
  products Product [not null]
}

Table Product {
  id Int [pk, increment]
  name String [not null]
  description String
  price Float [not null]
  image String
  stock Int [default: 0]
  slug String [unique]
  categoryId Int
  category Category
  authorId Int [not null]
  author User [not null]
  created_at DateTime [default: `now()`, not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  published Boolean [not null, default: false]
  products Product [not null]
}

Ref: Product.categoryId > Category.id

Ref: Product.authorId > User.id